--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
       <div class= center>
     	<nav>
           <ul>
-    	      <li><a href="HomePage.html">Home</a></li>
-          <li><a href="Menu.html">&nbsp; Menu</a></li>
-          <li><a href="AboutUs.html">About Us</a></li>
-          <li><a href="ContactUs.html">&nbsp;Contact Us</a></li>
+    	      <li><a href="index.html">Home</a></li>
+	     		<li><a href="products.html">&nbsp; Menu</a></li>
+	     		<li><a href="about.html">About Us</a></li>
+	     		<li><a href="contact.html">&nbsp;Contact Us</a></li>
             </div>
           </ul>
       </nav>
