--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	     <h1><big>COOKAYEs CAFE</big></h1>
 	     <nav>
 	     	<ul>
-	     		<<li><a href="index.html">Home</a></li>
+	     		<li><a href="index.html">Home</a></li>
 	     		<li><a href="products.html">&nbsp; Menu</a></li>
 	     		<li><a href="about.html">About Us</a></li>
 	     		<li><a href="contact.html">&nbsp;Contact Us</a></li>
